# programmer-wander

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
skills/getting-started/: SKILL.md
src/: main.rs  mcp.rs
src/tools/: config.rs  file.rs  git.rs  http.rs  infra.rs  input.rs  mod.rs  planner.rs  psession.rs  registry.rs  search.rs  security.rs  shell.rs  smart.rs  sqlite.rs  system.rs  transform.rs  webhook.rs  wsl.rs
wix/: main.wxs
