[package]
name = "programmer"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Joseph Wander <josephwander@gmail.com>"]
license = "MIT"
description = "MCP server giving any AI a complete Rust + Windows dev shell"
repository = "https://github.com/AIWander/Programmer-Wander"
readme = "README.md"
rust-version = "1.75"

[[bin]]
name = "programmer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File operations
walkdir = "2"
regex = "1"
glob = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# System info
sysinfo = "0.29"

# Clipboard (Windows)
arboard = "3.2"

# Git operations
git2 = "0.18"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# Utilities
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
async-recursion = "1"
rand = "0.8"

# Registry (Windows)
winreg = "0.52"

# Archive
zip = "0.6"
tar = "0.4"
flate2 = "1"

# CLI subcommand parsing
dirs = "5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
